feat: aprimorado sistema de autenticação, retornando dados do usuário
